@@ -33,7 +33,7 @@
   msys-bison.xml:2010092500
   msys-bzip2.xml:2010080500
   msys-console.xml:2011022501
-  msys-core.xml:2010100100
+  msys-core.xml:2011042400
   msys-coreutils.xml:2010071901
   msys-crypt.xml:2010090500
   msys-cvs.xml:2010090600
