@@ -1,3 +1,10 @@
+2011-04-24  Cesar Strauss  <cestrauss@gmail.com>
+
+	Update & publish msys-core.
+
+	* msys/msys-core.xml: Update to 1.0.17-1.
+	* msys/issue.log: Updated accordingly.
+
 2011-04-23  Charles Wilson  <mingw@cwilson.fastmail.fm>
 
 	Update & publish mingw32-zlib.
